Ajout class Css

--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 <body>
     <section>
         <div class="transition">
-            
+            <p>exo1</p>
         </div>
-        <div class="transition"></div>
-        <div class="transition"></div>
+        <div class="transition2">
+            <p>exo2</p>
+        </div>
+        <div class="transition3">
+            <p>exo3</p>
+        </div>
     </section>
 </body>
 </html>
