Fin exercice Animation

--- a/index.html
+++ b/index.html
@@ -8,16 +8,10 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <section>
-        <div class="transition">
-            <p>exo1</p>
-        </div>
-        <div class="transition2">
-            <p>exo2</p>
-        </div>
-        <div class="transition3">
-            <p>exo3</p>
-        </div>
+    <section class="container">
+        <button class="btn btn-left">left</button>
+        <button class="btn btn-center">center</button>
+        <button class="btn btn-bottom">bottom</button>
     </section>
 </body>
 </html>
